# protein_structure_analysis

./: Makefile  README.md  pyproject.toml
data/: 6vtx.cif  KLF4_HUMAN_homologs.fasta
docs/: .buildinfo  conf.py  genindex.html  index.html  index.rst  objects.inv  search.html  searchindex.js
docs/.doctrees/: environment.pickle  index.doctree
docs/notebooks/: analysis.nblink
