[tool.poetry]
name = "protein_structure_analysis"
version = "0.1.0"
description = ""
authors = ["Rico Meinl <rmeinl97@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
biopython = "^1.79"
nglview = "^3.0.3"
matplotlib = "^3.5.1"
pandas = "^1.4.1"

[tool.poetry.dev-dependencies]
ipykernel = "^6.9.1"
Sphinx = "^4.4.0"
nbsphinx = "^0.8.8"
pandoc = "^2.1"
ipython = "^8.1.1"
nbsphinx-link = "^1.3.0"
sphinx-material = "^0.0.35"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
